[project]
name = "envguard"
version = "0.1.0"
description = "Fail-fast, human-friendly environment configuration for Python"
authors = [{ name = "Rochdi Khalid" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"