[project]
name = "envguard"
version = "0.1.0"
description = "Fail-fast, human-friendly environment configuration for Python"
authors = [{ name = "Rochdi Khalid" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

# Optional but recommended for discoverability
keywords = ["env", "configuration", "environment variables", "validation", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

# Optional dependencies for the package itself
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
